--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.12.2",
     "next": "^15.3.2",
     "react": "^19.0.0",
